[package]
name = "unpoly"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrijken/unpoly-rs"
keywords = ["unpoly", "axum"]
authors = ["Marc Rijken <marc@rijken.org>"]
description = "Helper for the Unpoly API, initially for usage in Axum handlers"
exclude = [".github/*"]

[features]
default = ["axum"]
axum=["dep:axum"]

[dependencies]
axum = { version= "0.8.1", optional=true}
serde_json="1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
derive_more = {version="1.0.0", features = ["full"]}
http = "1.2.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
